[package]
name = "point24"
version = "0.2.0"
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.num-rational]
version = "0.2"
default-features = false

[dependencies.num-traits]
version = "0.2.4"
default-features = false
